Add lentil and sweet potato curry recipe and index
Add lentil and sweet potato curry html page in recipe folder, and image
of curry within food_image folder. Add link to this page in index.html.
Add serving size to chocolate cake html file.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<h1>Odin Recipes</h1>
 		<ul>
 			<li><a href="./recipes/chocolate-cake.html">Chocolate Cake</a></li>
+			<li><a href="./recipes/lentil-sweet-potato-curry.html">Lentil and Sweet Potato Curry</a></li>
 		</ul>
 	</body>
 </html>
