--- a/recipes/chocolate-cake.html
+++ b/recipes/chocolate-cake.html
@@ -16,7 +16,7 @@
 		
 		<br>
 		<h2>Description:</h2>
-		<p>This recipe creates an amazing chocolate cake with an airy, light sponge and rich buttercream filling which will satisfy anybody who eats it. This recipe is taken from BBC good foods. Click on the image to find out more.</p>
+		<p>This recipe creates an amazing chocolate cake with an airy, light sponge and rich buttercream filling which will satisfy anybody who eats it. This recipe is taken from BBC good foods. Click on the image to find out more. Serves 12-14.</p>
 		<hr>
 
 		<br>
