--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<ul>
 			<li><a href="./recipes/chocolate-cake.html">Chocolate Cake</a></li>
 			<li><a href="./recipes/lentil-sweet-potato-curry.html">Lentil and Sweet Potato Curry</a></li>
+			<li><a href="./recipes/cottage-pie.html">Cottage Pie</a></li>
 		</ul>
 	</body>
 </html>
