--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Odin Recipes</title>
+		<link rel="stylesheet" href="./style.css">
 	</head>
 
 	<body>
-		<h1>Odin Recipes</h1>
-		<ul>
-			<li><a href="./recipes/chocolate-cake.html">Chocolate Cake</a></li>
-			<li><a href="./recipes/lentil-sweet-potato-curry.html">Lentil and Sweet Potato Curry</a></li>
-			<li><a href="./recipes/cottage-pie.html">Cottage Pie</a></li>
-		</ul>
+		<div class="homepage">
+			<h1 class="header">Odin Recipes</h1>
+			<ul type="none">
+				<li><a href="./recipes/chocolate-cake.html">Chocolate Cake</a></li>
+				<li><a href="./recipes/lentil-sweet-potato-curry.html">Lentil and Sweet Potato Curry</a></li>
+				<li><a href="./recipes/cottage-pie.html">Cottage Pie</a></li>
+			</ul>
+		</div>
 	</body>
 </html>
